@@ -1205,7 +1205,7 @@ imagemask operator instead of the image operator.
 <dt>tiff:alpha={unspecified|associated|unassociated}</dt>
 <dd>Specify the TIFF alpha channel type when reading or writing TIFF files,
 overriding the normal value. The default alpha channel type for new files
-is associated alpha. Existing alpha settings are preserved when
+is unspecified alpha. Existing alpha settings are preserved when
 converting from one TIFF file to another. When a TIFF file uses
 associated alpha, the image pixels are pre-multiplied (i.e. altered) with
 the alpha channel. Files with "associated" alpha appear as if they were
