@@ -1,4 +1,4 @@
-.TH gm 1 "2014/02/11" "GraphicsMagick"
+.TH gm 1 "2014/02/22" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -1352,7 +1352,7 @@ imagemask operator instead of the image operator.
 .in 20
 Specify the TIFF alpha channel type when reading or writing TIFF files,
 overriding the normal value. The default alpha channel type for new files
-is associated alpha. Existing alpha settings are preserved when
+is unspecified alpha. Existing alpha settings are preserved when
 converting from one TIFF file to another. When a TIFF file uses
 associated alpha, the image pixels are pre-multiplied (i.e. altered) with
 the alpha channel. Files with "associated" alpha appear as if they were
